# rust-foxbit-api

./: .gitignore  Cargo.toml  TODO.md
src/: api.rs  foxbit.rs  helpers.rs  lib.rs  types.rs
tests/: unit.rs
